--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
     </section>
 
     <section id="projects" class="section container reveal">
-      <h2>Selected Projects</h2>
+      <h2> Projects</h2>
       <div class="project-grid">
         <article class="card project">
           <h3>Vaccine Reminder and Health Record System</h3>
